// Copyright 2024 PingCAP, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package pingcap.tiflow.new_arch.downstreamadapter.messages;
option go_package = "github.com/pingcap/tiflow/new_arch/downstreamadapter/messages";

message Span {
    int64 table_id = 1;
    bytes start_key = 2;
    bytes end_key = 3;
}

message State {
    bool isBlocked = 1;
    uint64 checkpointTs = 2;
    string blockType = 3;
    repeated Span BlockFor = 4;
}

message TableStatus {
    Span span = 1;
    State state = 2;

}

message HeartBeatMessage {
    repeated TableStatus table_status = 1;
    // todo
}

enum Action {
    WriteEvent = 0;
	PassEvent = 1;
	WaitEvent = 2;
}
message TableResponse {
    Span span = 1;
    Action action = 2; 
}

message NewTable {
    Span span = 1;
    uint64 startTs = 2;
}

message HeartBeatResponse {
    repeated TableResponse table_response = 1;
    repeated NewTable new_table =2;
}